samples/_failures_safe/1761790635_6295d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a26902af.c: In function ‘main’:
./samples/SAFE/__tmp_a26902af.c:142:5: error: expected expression at end of input
  142 |     uint8_t sample2[] = {0x57, 0x6F, 0x72, 0x6C,
      |     ^~~~~~~
./samples/SAFE/__tmp_a26902af.c:142:5: error: expected declaration or statement at end of input
